--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Dibujo</h1>
     <br>
+    <img src="sprites/persona.png" alt="persona" id="image">
+    <br>
     <canvas id="result" height="100" width="100" style="border: 1px solid #bcbcbc;"></canvas>
+    <br>
+    <span role="textbox" contenteditable="true" id="input" style="border: 1px solid #000000;display: block;width: 100%;min-height: 40;"></span>
 </body>
 </html>
